# ai-ops

./: .envrc  .gitignore  AGENTS.md  LICENSE  README.ja.md  README.md  flake.nix  pyproject.toml  setup.py
.ai-ops/: harness.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  ecosystem-watch.yml  managed-project-check.yml  managed-project-review.yml  propagate-cron.yml
ai_ops/: __init__.py  bootstrap.py  cli.py  config.py  models.py  paths.py  process.py  propagate.py  report.py  review.py  setup.py  worktree.py
ai_ops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ai_ops/agents/: __init__.py  base.py  claude.py  codex.py  prompt_only.py  subprocess.py
ai_ops/audit/: __init__.py  _canonical.py  fleet.py  harness.py  lifecycle.py  nix.py  projects.py  security.py  standard.py  workflow.py
ai_ops/checks/: __init__.py  runner.py
ai_ops/lifecycle/: __init__.py  migration.py  plans.py  project.py  prompts.py
docs/: ai-first-lifecycle.md  fleet-audit.md  operation.md  project-addition-and-migration.md  project-relocation.md  projects-audit.md  realignment.md  self-operation.md
docs/decisions/: 0001-agents-md-as-primary.md  0002-portability-first.md  0003-deletion-policy.md  0004-portability-first.md  0004-secrets-management.md  0005-nix-optional-reproducibility-layer.md  0006-ai-first-project-lifecycle.md  0007-deletion-policy.md  0007-python-canonical-cli.md  0008-plan-persistence.md  0008-secrets-management.md  0009-git-workflow-tiers.md  0010-worktree-workflow.md  0011-github-native-operation.md  0012-pr-ai-review.md  0014-nix-optional-reproducibility-layer.md  0015-ai-first-project-lifecycle.md  INDEX.md  (+1 more)
templates/: agent-handoff.md  migration-brief.md  plan.md  project-brief.md
tests/: test_audit.py  test_audit_fleet.py  test_audit_harness.py  test_audit_projects.py  test_audit_standard.py  test_audit_workflow.py  test_bootstrap.py  test_cli.py  test_config.py  test_packaging.py  test_paths.py  test_propagate.py  test_review.py  test_review_smoke.py  test_setup.py  test_worktree.py
(+41 files in other folders)
