[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ops"
version = "0.1.0"
description = "Cross-platform AI-first project lifecycle CLI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/tekitounix/ai-ops"
Repository = "https://github.com/tekitounix/ai-ops"
Issues = "https://github.com/tekitounix/ai-ops/issues"

[project.scripts]
ai-ops = "ai_ops.cli:main"

[tool.setuptools.packages.find]
include = ["ai_ops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
